--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 body {
-
     background-color:cyan;
     font-family: 'Franklin Gothic Medium',  Arial, sans-serif;
 }
 
-img{
-
-    height:269px;
-    width: 269px;
+h1{
+    color: green;
 }
-p{
- color:red;
+img{
+    width: 300px;
+    height:270px;
+    
+}
+
+h6{
+    color:darkmagenta;
+}
+
+u{
+    color:crimson;
 }
